--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
 <div>
     et voila un vaisseau !!!! 
 </div>
+<ul>
+   <li>1.falcon</li>
+   <li>2.empire</li>
+   <li>3. x win</li>
+
+</ul>
 </body>
 </html>
