feat:head 2 added

--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@ il etait une fois un jedi perdu dans l espace!!!!
    <li>3. x win</li>
 
 </ul>
+
+<div>
+
+    <h2>planetes </h2>
+</div>
 </body>
 </html>
