feat :add tatouine

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@ il etait une fois un jedi perdu dans l espace!!!!
 <div>
 
     <h2>planetes </h2>
+    <div> 
+        tatoueine
+    
+    </div>
 </div>
 </body>
 </html>
