--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ il etait une fois un jedi perdu dans l espace!
 
     <h2>planetes </h2>
     <div> 
-        tatoueine
+       -- tatoueine
     
     </div>
 </div>
